fix: prevent layout shift after chart generation

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -5,6 +5,7 @@ $accent: #fd755c;
 body {
   background: $white;
   margin: 0;
+  overflow-y: scroll;
 }
 
 body,
